Sat Mar  8 00:01:20 2003                        Michael Jennings (mej)

Let's try not to break stuff, shall we?
----------------------------------------------------------------------
Mon Mar 17 16:27:53 2003                        Michael Jennings (mej)

More work on docs.
----------------------------------------------------------------------
Tue Apr  1 23:07:15 2003                        Michael Jennings (mej)

More documentation work.  libast.h is almost finished.
----------------------------------------------------------------------
Fri Apr  4 22:59:45 2003                        Michael Jennings (mej)

Finally finished documenting libast.h.
----------------------------------------------------------------------
Tue Apr  8 17:14:32 2003                        Michael Jennings (mej)

Finished documenting libast_internal.h.  Also some 64-bit cleanliness
fixes.
----------------------------------------------------------------------
Thu Apr 10 17:54:19 2003                        Michael Jennings (mej)

Docs for some of the .c files.
----------------------------------------------------------------------
Fri Apr 11 17:10:15 2003                        Michael Jennings (mej)

Completed documentation of the memory management system.
----------------------------------------------------------------------
Mon Jun 16 20:43:43 2003                        Michael Jennings (mej)

Additional documentation.

Added support for versions containing "rc."
----------------------------------------------------------------------
Fri Jun 27 17:53:29 2003                        Michael Jennings (mej)

Starting in on the docs for the object system.  Yum.
----------------------------------------------------------------------
Tue Jul  1 15:50:57 2003                        Michael Jennings (mej)

Finished the type docs.  Still working on the object docs.
----------------------------------------------------------------------