@@ -36,7 +36,6 @@
 #define SPIF_OBJ_IS_LINKED_LIST_ITEM(o)            (SPIF_OBJ_IS_TYPE((o), linked_list_item))
 
 SPIF_DEFINE_OBJ(linked_list_item) {
-    SPIF_DECL_PARENT_TYPE(nullobj);
     spif_obj_t data;
     spif_linked_list_item_t next;
 };
